[package]
name = "vmux_desktop_next"
version.workspace = true
edition.workspace = true
publish = false

[features]
debug = []

[[bin]]
name = "vmux_desktop_next"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true }
bevy_cef = { workspace = true, features = ["debug"] }
directories = "5"
ron = { workspace = true }
serde = { workspace = true }
vmux_core = { path = "../vmux_core" }
vmux_history = { path = "../vmux_history" }
vmux_scene = { path = "../vmux_scene" }
vmux_webview_app = { path = "../vmux_webview_app" }
