[package]
name = "vmux_editor"
description = "Bevy + CEF + Dioxus file viewer webview"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = []
web = []

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
rkyv = { workspace = true }
vmux_core = { path = "../vmux_core" }
vmux_git = { path = "../vmux_git" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { workspace = true }
bevy_cef = { workspace = true }
bevy_ecs = { workspace = true }
bevy_reflect = { workspace = true }
tracing = "0.1"
url = { workspace = true }
percent-encoding = "2"
notify = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
lsp-types = "0.97"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
syntect = { workspace = true }
two-face = { version = "0.5", default-features = false, features = ["syntect-fancy"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
ropey = "1"
arboard = "3"
unicode-width = "0.2"
unicode-segmentation = "1"
vmux_command = { path = "../vmux_command" }
vmux_layout = { path = "../vmux_layout" }
vmux_setting = { path = "../vmux_setting" }
vmux_space = { path = "../vmux_space" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tempfile = "3"
url = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true }
js-sys = "0.3"
unicode-width = "0.2"
vmux_ui = { path = "../vmux_ui", default-features = false }
wasm-bindgen = { workspace = true }
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlElement", "Node",
    "DomRect", "CssStyleDeclaration",
    "ResizeObserver", "ResizeObserverEntry",
    "WheelEvent", "KeyboardEvent", "Location",
    "Blob", "Url",
    "HtmlTextAreaElement", "InputEvent", "CompositionEvent", "MouseEvent",
    "ScrollIntoViewOptions", "ScrollLogicalPosition",
] }

[[bin]]
name = "vmux_mock_lsp"
path = "src/bin/vmux_mock_lsp.rs"
