[package]
name = "vmux_header"
description = "Bevy + CEF + Dioxus header webview"
version.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[features]
default = []
debug = []
web = []

[[bin]]
name = "vmux_header_app"
path = "src/main.rs"
required-features = ["web"]

[lib]
path = "src/lib.rs"

[build-dependencies]
vmux_webview_app = { path = "../vmux_webview_app", features = ["build"] }

[dependencies]
serde = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { workspace = true }
bevy_cef = { workspace = true, features = ["debug"] }
bevy_ecs = { workspace = true }
bevy_reflect = { workspace = true }
moonshine-save = { workspace = true }
vmux_webview_app = { path = "../vmux_webview_app" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true }
vmux_ui = { path = "../vmux_ui", default-features = false }
wasm-bindgen = "0.2.115"
