[package]
name = "vmux_history"
description = "Minimal Bevy + CEF + Dioxus POC (history host message bridge)"
version.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[features]
default = []
debug = []
web = []

[[bin]]
name = "vmux_history_app"
path = "src/main.rs"
required-features = ["web"]

[lib]
path = "src/lib.rs"

[build-dependencies]
vmux_webview_app = { path = "../vmux_webview_app", features = ["build"] }

[dependencies]
serde = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { workspace = true }
bevy_cef = { workspace = true }
bevy_reflect = { workspace = true }
moonshine-save = { workspace = true }
bevy_ecs = { workspace = true }
chrono = { workspace = true }
ron = { workspace = true }
url = { workspace = true }
vmux_core = { path = "../vmux_core" }
vmux_header = { path = "../vmux_header" }
vmux_webview_app = { path = "../vmux_webview_app" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
bevy = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true }
vmux_ui = { path = "../vmux_ui", default-features = false }
wasm-bindgen = "0.2.115"
