[package]
name = "vmux_history"
description = "Minimal Bevy + CEF + Dioxus POC (history host message bridge)"
version.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[features]
default = []
debug = []
web = []

[[bin]]
name = "vmux_history_app"
path = "src/main.rs"
required-features = ["web"]

[lib]
path = "src/lib.rs"

[build-dependencies]
vmux_server = { path = "../vmux_server", features = ["build"] }

[dependencies]
rkyv = { workspace = true }
serde = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { workspace = true }
bevy_cef = { workspace = true }
bevy_cef_core = { workspace = true }
bevy_reflect = { workspace = true }
moonshine-save = { workspace = true }
bevy_ecs = { workspace = true }
ron = { workspace = true }
vmux_core = { path = "../vmux_core" }
vmux_server = { path = "../vmux_server" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
bevy = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true }
js-sys = "0.3"
vmux_ui = { path = "../vmux_ui", default-features = false }
wasm-bindgen = "0.2.115"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element",
    "IntersectionObserver", "IntersectionObserverEntry", "IntersectionObserverInit",
] }
