[package]
name = "vmux_history_poc"
description = "Minimal Bevy + CEF POC serving local history HTML"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "vmux_history_poc"
path = "src/main.rs"

[features]
default = []
debug = ["bevy_cef/debug"]

[dependencies]
bevy = { workspace = true }
bevy_cef = { workspace = true }
serde = { workspace = true }
