[package]
name = "vmux_history_poc"
description = "Minimal Bevy + CEF + Dioxus POC (history host message bridge)"
version.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[features]
default = []
debug = ["bevy_cef/debug"]

[[bin]]
name = "vmux_history_app"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[build-dependencies]
vmux_utils = { path = "../vmux_utils" }

[dependencies]
serde = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { workspace = true }
bevy_ecs = { workspace = true }
bevy_cef = { workspace = true }
bevy_cef_core = { workspace = true }
ron = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true }
serde = { workspace = true }
vmux_ui = { path = "../vmux_ui", default-features = false }
wasm-bindgen = "0.2.115"
