[package]
name = "vmux_history_poc"
description = "Minimal Bevy + CEF + Dioxus POC (history host message bridge)"
version.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[features]
default = []
debug = []
web = []

[[bin]]
name = "vmux_history_app"
path = "src/main.rs"
required-features = ["web"]

[lib]
path = "src/lib.rs"

[build-dependencies]
vmux_utils = { path = "../vmux_utils" }

[dependencies]
serde = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { workspace = true }
vmux_webview_app = { path = "../vmux_webview_app" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
bevy = { workspace = true }
bevy_cef = { workspace = true, features = ["debug"] }
bevy_ecs = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
ron = { workspace = true }
url = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true }
vmux_ui = { path = "../vmux_ui", default-features = false }
wasm-bindgen = "0.2.115"
