[package]
name = "vmux_input"
description = "vmux — leafwing input, quit shortcuts, and tmux-style chord scheduling"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
bevy = { workspace = true }
bevy_cef = { workspace = true }
bevy_cef_core = { workspace = true }
leafwing-input-manager = { workspace = true }
vmux_command = { path = "../vmux_command" }
vmux_core = { path = "../vmux_core" }
vmux_layout = { path = "../vmux_layout" }
vmux_settings = { path = "../vmux_settings" }
