[package]
name = "vmux_knowledge"
description = "Local-first Markdown knowledge base"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = []
web = []

[lib]
path = "src/lib.rs"

[dependencies]
rkyv = { workspace = true }
serde = { workspace = true }
vmux_core = { path = "../vmux_core" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { workspace = true }
bevy_cef = { workspace = true }
bevy_ecs = { workspace = true }
libc = "0.2"
notify = { workspace = true }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
url = { workspace = true }
vmux_layout = { path = "../vmux_layout" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true }
js-sys = "0.3"
vmux_ui = { path = "../vmux_ui", default-features = false }
wasm-bindgen = { workspace = true }
web-sys = { version = "0.3", features = ["Document", "Window"] }

[dev-dependencies]
tempfile = "3"
