[package]
name = "vmux_knowledge"
description = "Local-first Markdown knowledge base"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
rkyv = { workspace = true }
serde = { workspace = true }
vmux_core = { path = "../vmux_core" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { workspace = true }
bevy_cef = { workspace = true }
bevy_ecs = { workspace = true }
notify = { workspace = true }
vmux_layout = { path = "../vmux_layout" }

[dev-dependencies]
tempfile = "3"
