[package]
name = "vmux_layout"
description = "Bevy layout shell and single CEF layout webview"
version.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[features]
default = []
debug = []
web = []

[lib]
path = "src/lib.rs"

[dependencies]
rkyv = { workspace = true }
serde = { workspace = true }
vmux_core = { path = "../vmux_core" }

[dev-dependencies]
serde_json = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { workspace = true }
bevy_asset = "0.18"
bevy_cef = { workspace = true }
bevy_cef_core = { workspace = true }
bevy_ecs = { workspace = true }
bevy_reflect = { workspace = true }
bevy_render = "0.18"
bevy_winit = { workspace = true }
libc = "0.2"
moonshine-save = { workspace = true }
raw-window-handle = "0.6"
rfd = { workspace = true }
ron = { workspace = true }
uuid = { workspace = true }
vmux_command = { path = "../vmux_command" }
vmux_history = { path = "../vmux_history" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true }
js-sys = "0.3"
vmux_command = { path = "../vmux_command" }
vmux_ui = { path = "../vmux_ui", default-features = false }
wasm-bindgen = "0.2.115"
web-sys = { version = "0.3", features = [
    "AddEventListenerOptions",
    "CssStyleDeclaration",
    "Document",
    "Element",
    "Event",
    "EventInit",
    "EventTarget",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "KeyboardEventInit",
    "ScrollIntoViewOptions",
    "ScrollLogicalPosition",
    "Window",
] }
