[package]
name = "vmux_layout"
description = "Bevy layout shell and single CEF layout webview"
version.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[features]
default = []
debug = []
web = []

[lib]
path = "src/lib.rs"

[dependencies]
rkyv = { workspace = true }
serde = { workspace = true }
vmux_core = { path = "../vmux_core" }

[dev-dependencies]
serde_json = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { workspace = true }
bevy_asset = "0.19.0-rc.2"
bevy_cef = { workspace = true }
bevy_cef_core = { workspace = true }
bevy_ecs = { workspace = true }
bevy_reflect = { workspace = true }
bevy_render = "0.19.0-rc.2"
bevy_winit = { workspace = true }
libc = "0.2"
moonshine-save = { workspace = true }
raw-window-handle = "0.6"
rfd = { workspace = true }
ron = { workspace = true }
uuid = { workspace = true }
vmux_command = { path = "../vmux_command" }
vmux_history = { path = "../vmux_history" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSEvent",
    "NSView",
    "NSWindow",
] }
objc2-foundation = { version = "0.3", features = ["NSGeometry"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true }
js-sys = "0.3"
vmux_command = { path = "../vmux_command" }
vmux_git = { path = "../vmux_git" }
vmux_ui = { path = "../vmux_ui", default-features = false }
wasm-bindgen = "0.2.115"
web-sys = { version = "0.3", features = [
    "AddEventListenerOptions",
    "CssStyleDeclaration",
    "Document",
    "Element",
    "Event",
    "EventInit",
    "EventTarget",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "KeyboardEventInit",
    "Location",
    "ResizeObserver",
    "ResizeObserverEntry",
    "ScrollIntoViewOptions",
    "ScrollLogicalPosition",
    "Window",
] }
