[package]
name = "vmux_mcp"
version.workspace = true
edition.workspace = true
description = "MCP stdio server for Vmux workspace controls"
publish = false

[lib]
name = "vmux_mcp"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
vmux_command_mcp = { path = "../vmux_command_mcp" }
vmux_macro = { path = "../vmux_macro" }
vmux_service = { package = "vmux_service_client", path = "../vmux_service_client" }
