[package]
name = "vmux_mobile"
version.workspace = true
edition.workspace = true
description = "Native Dioxus Mobile client for Vmux"
publish = false

[features]
default = []
mobile = ["dioxus/mobile"]

[[bin]]
name = "vmux_mobile"
path = "src/main.rs"
required-features = ["mobile"]

[dependencies]
dioxus = { version = "=0.7.9", default-features = false, features = [
    "minimal",
    "document",
    "asset",
    "mounted",
] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
    "json",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time"] }
url = { workspace = true }
vmux_remote = { path = "../vmux_remote" }
vmux_chat_ui = { path = "../vmux_chat_ui" }

[target.'cfg(target_os = "ios")'.dependencies]
dispatch2 = "0.3"
objc2 = "0.6"
objc2-av-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "AVAnimation",
    "AVCaptureDevice",
    "AVCaptureInput",
    "AVCaptureMetadataOutput",
    "AVCaptureOutput",
    "AVCaptureOutputBase",
    "AVCaptureSession",
    "AVCaptureVideoPreviewLayer",
    "AVMediaFormat",
    "AVMetadataObject",
    "dispatch2",
    "objc2-core-foundation",
    "objc2-quartz-core",
] }
objc2-core-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "CFCGTypes",
] }
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSArray",
    "NSError",
    "NSObject",
    "NSString",
] }
objc2-quartz-core = { version = "0.3", default-features = false, features = [
    "std",
    "CALayer",
    "objc2-core-foundation",
] }
objc2-ui-kit = { version = "0.3", default-features = false, features = [
    "block2",
    "NSText",
    "objc2-core-foundation",
    "objc2-quartz-core",
    "UIButton",
    "UIColor",
    "UIControl",
    "UIFont",
    "UILabel",
    "UIGeometry",
    "UIPresentationController",
    "UIResponder",
    "UISheetPresentationController",
    "UIView",
    "UIViewController",
] }
