[package]
name = "vmux_profile"
description = "Vmux profile names and filesystem paths"
version.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
