[package]
name = "vmux_scene"
description = "vmux — 3D scene bootstrap (camera, light, window)"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
bevy = { workspace = true }
bevy_winit = { workspace = true }
vmux_command = { path = "../vmux_command" }
vmux_core = { path = "../vmux_core" }
vmux_settings = { path = "../vmux_settings" }

[target.'cfg(target_os = "macos")'.dependencies]
liquid-glass-rs = "0.1.1"
raw-window-handle = "0.6"
